--- a/ml-tp2.ipynb
+++ b/ml-tp2.ipynb
@@ -734,26 +734,26 @@
      "output_type": "stream",
      "text": [
       "20 / 20\n",
-      " [[-0.33853012  0.38678676]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]\n",
-      " [-0.33853012  0.38678676]\n",
-      " [ 0.03140377 -0.00662957]]\n"
+      " [[ 0.488      -0.33853012  0.38678676]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]\n",
+      " [ 0.488      -0.33853012  0.38678676]\n",
+      " [-0.024       0.03140377 -0.00662957]]\n"
      ]
     }
    ],
@@ -773,7 +773,7 @@
     "        lr.fit(X_train, y_train)\n",
     "        y_pred_tuning = lr.predict(X_valid)\n",
     "        N = len(y_valid)\n",
-    "        gradient_descent_values.append((1/N)*np.dot(y_pred_tuning - y_valid, X_valid[:, 1:]))\n",
+    "        gradient_descent_values.append(np.dot(X_valid.T, (y_pred_tuning - y_valid))/N)\n",
     "\n",
     "print(\"\\n\", np.array(gradient_descent_values))"
    ]
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "feb42ac7",
    "metadata": {
     "deletable": false,
@@ -866,14 +866,21 @@
    "outputs": [],
    "source": [
     "class GaussianGenerativeModel():\n",
-    "\n",
+    "    def __init__(self):\n",
+    "        self.W = None\n",
+    "        self.threshold = 0.5\n",
+    "    \n",
     "    def fit(self, X, y):\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.W = np.zeros(X.shape[1])\n",
+    "        N = len(y)\n",
+    "        for i in range(self.n_iters) :\n",
+    "            y_pred = self.sigmoid(np.dot(X, self.W))\n",
+    "            self.W -= self.learning_rate*(np.dot(X.T, (y_pred - y))/N)\n",
+    "            self.loss_hist[i] = self.binary_cross_entropy(y, y_pred)\n",
     "        \n",
     "    def predict(self, X):\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()"
+    "        y_pred = self.sigmoid(np.dot(X, self.W))\n",
+    "        return y_pred >= self.threshold"
    ]
   },
   {
@@ -902,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "76110f0e",
    "metadata": {
     "deletable": false,
@@ -948,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "583f79ab",
    "metadata": {
     "deletable": false,
@@ -1021,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ec6b6cda",
    "metadata": {
     "deletable": false,
@@ -1101,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "370bcae5-5bb1-4036-a5a9-cd3852b1ddef",
    "metadata": {
     "deletable": false,
@@ -1149,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bbee6e84-4491-4ff1-a677-cc9a0259162f",
    "metadata": {
     "deletable": false,
@@ -1217,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fcf0c8c7-3e01-4825-b502-6b24096bc725",
    "metadata": {
     "deletable": false,
@@ -1264,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5093501a-a175-42c5-8f55-cd9826f397ed",
    "metadata": {
     "deletable": false,
@@ -1312,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a079b7bf-e98e-4e1c-b7ec-2a7dc3906976",
    "metadata": {
     "deletable": false,
