--- a/ml-tp2.ipynb
+++ b/ml-tp2.ipynb
@@ -1489,26 +1489,26 @@
     "\n",
     "# Loop through each fold for cross-validation\n",
     "for train_index, test_index in kf.split(X_train_cancer, y_train_cancer):\n",
-    "    X_train, X_test = X_train_cancer[train_index], X_train_cancer[test_index]\n",
-    "    y_train, y_test = y_train_cancer[train_index], y_train_cancer[test_index]\n",
+    "    X_train_kf, X_test_kf = X_train_cancer[train_index], X_train_cancer[test_index]\n",
+    "    y_train_kf, y_test_kf = y_train_cancer[train_index], y_train_cancer[test_index]\n",
     "\n",
     "\n",
     "    # Initialize and fit the GGM model\n",
     "    ggm_cancer = GaussianGenerativeModel()\n",
-    "    ggm_cancer.fit(X_train, y_train)\n",
-    "    y_pred_ggm = ggm_cancer.predict(X_test)\n",
-    "    accuracy = accuracy_score(y_test, y_pred_ggm)\n",
+    "    ggm_cancer.fit(X_train_kf, y_train_kf)\n",
+    "    y_pred_ggm = ggm_cancer.predict(X_test_kf)\n",
+    "    accuracy = accuracy_score(y_test_kf, y_pred_ggm)\n",
     "    accuracy_scores_ggm.append(accuracy)\n",
     "\n",
     "    # stacking for LR\n",
-    "    X_train = np.column_stack((np.ones(X_train.shape[0]), X_train))\n",
-    "    X_test = np.column_stack((np.ones(X_test.shape[0]), X_test))\n",
+    "    X_train_kf = np.column_stack((np.ones(X_train_kf.shape[0]), X_train_kf))\n",
+    "    X_test_kf = np.column_stack((np.ones(X_test_kf.shape[0]), X_test_kf))\n",
     "    \n",
     "    # Initialize and fit the LR model\n",
     "    lr_cancer = LogisticRegression()\n",
-    "    lr_cancer.fit(X_train, y_train)\n",
-    "    y_pred_lr = lr_cancer.predict(X_test)\n",
-    "    accuracy = accuracy_score(y_test, y_pred_lr)\n",
+    "    lr_cancer.fit(X_train_kf, y_train_kf)\n",
+    "    y_pred_lr = lr_cancer.predict(X_test_kf)\n",
+    "    accuracy = accuracy_score(y_test_kf, y_pred_lr)\n",
     "    accuracy_scores_lr.append(accuracy)\n",
     "    \n",
     "    \n",
@@ -1538,6 +1538,96 @@
    "source": [
     "## **Answer :**\n",
     "**Hi**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "552c933d",
+   "metadata": {},
+   "source": [
+    "# Bonus :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "5c5a3e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LogisticRegressionMulti():\n",
+    "    \n",
+    "    def __init__(self, learning_rate=0.1, n_iters=1000, K=2):\n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.n_iters = n_iters\n",
+    "        self.W = None\n",
+    "        self.K = K\n",
+    "        self.loss_hist = np.zeros(self.n_iters)\n",
+    "        self.threshold = 0.5\n",
+    "    \n",
+    "    def softmax(self, X):\n",
+    "        return np.array([np.exp(X[i])/ np.sum(np.exp(X)[:self.K]) for i in range(len(X))])\n",
+    "\n",
+    "    def categorical_cross_entropy(self, y, y_pred):\n",
+    "        N = len(y)\n",
+    "        y_acc = np.clip(y_pred, 10**-6, 1 - 10**-6)\n",
+    "        return (-1/N)*np.sum([y[i]*np.log(y_acc[i]) + (1 - y[i])*np.log(1- y_acc[i]) for i in range(N)])\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        self.W = np.zeros((X.shape[1], self.K))\n",
+    "        N = len(y)\n",
+    "        for i in range(self.n_iters) :\n",
+    "            y_pred = self.softmax(np.dot(X, self.W))\n",
+    "            self.W -= self.learning_rate*(np.dot(X.T, (y_pred - y))/N)\n",
+    "            # self.loss_hist[i] = self.categorical_cross_entropy(y, y_pred)\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        y_pred = self.softmax(np.dot(X, self.W))\n",
+    "        # for K = 2 \n",
+    "        return np.array([[1, 0] if v[0] > v[1] else [0, 1] for v in y_pred])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "cbca6bea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.993006993006993\n",
+      "0.92\n",
+      "0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "lrm = LogisticRegressionMulti()\n",
+    "\n",
+    "# cancer dataset\n",
+    "y_train_cancer_multi = np.array([[1, 0] if v == 0 else [0, 1] for v in y_train_cancer])\n",
+    "y_valid_cancer_multi = np.array([[1, 0] if v == 0 else [0, 1] for v in y_valid_cancer])\n",
+    "lrm.fit(X_train_cancer_stacked, y_train_cancer_multi)\n",
+    "y_pred_multi_cancer = lrm.predict(X_valid_cancer_stacked)\n",
+    "print(accuracy_score(y_pred_multi_cancer, y_valid_cancer_multi))\n",
+    "\n",
+    "\n",
+    "# cluster dataset (easy)\n",
+    "y_train_multi = np.array([[1, 0] if v == 0 else [0, 1] for v in y_train])\n",
+    "y_valid_multi = np.array([[1, 0] if v == 0 else [0, 1] for v in y_valid])\n",
+    "lrm.fit(X_train, y_train_multi)\n",
+    "y_pred_multi = lrm.predict(X_valid)\n",
+    "print(accuracy_score(y_pred_multi, y_valid_multi))\n",
+    "\n",
+    "\n",
+    "# cluster dataset (hard)\n",
+    "y_train_multi = np.array([[1, 0] if v == 0 else [0, 1] for v in y_train])\n",
+    "y_valid_multi = np.array([[1, 0] if v == 0 else [0, 1] for v in y_valid])\n",
+    "lrm.fit(X_train, y_train_multi)\n",
+    "y_pred_multi = lrm.predict(X_valid)\n",
+    "print(accuracy_score(y_pred_multi, y_valid_multi))"
    ]
   },
   {
