--- a/ml-tp2.ipynb
+++ b/ml-tp2.ipynb
@@ -411,7 +411,7 @@
    },
    "source": [
     "## **Answer**\n",
-    "**If we standardize the dataset before splitting, it means we are going to use data outside the training dataset to fit our model (biased), in fact it's from the validation set. So the validation dataset is no longer something that's entirely new to the model.**\n",
+    "**In a real dataset, if we standardize the dataset before splitting, it means we are going to use data outside the training dataset to fit our model (biased), in fact it's from the validation set. So the validation dataset is no longer something that's entirely new to the model.**\n",
     "****"
    ]
   },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "id": "e931ae2b-89be-4daa-9209-5df4b9328c92",
    "metadata": {
     "deletable": false,
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "id": "bc2a7d60-01b8-4085-b003-c1c4a0a35191",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
     "\n",
     "# Create a colorbar to represent the float values\n",
     "cmap = plt.get_cmap('viridis')\n",
-    "sm = ScalarMappable(cmap=cmap)\n",
+    "sm = cm.ScalarMappable(cmap=cmap)\n",
     "sm.set_array([value[2] for value in gradient_descent_values])\n",
     "cbar = plt.colorbar(sm, ax=ax, orientation='vertical', label='Learning rate')\n",
     "\n",
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "feb42ac7",
    "metadata": {
     "deletable": false,
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "76110f0e",
    "metadata": {
     "deletable": false,
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "583f79ab",
    "metadata": {
     "deletable": false,
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "ec6b6cda",
    "metadata": {
     "deletable": false,
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "370bcae5-5bb1-4036-a5a9-cd3852b1ddef",
    "metadata": {
     "deletable": false,
@@ -1237,7 +1237,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "bbee6e84-4491-4ff1-a677-cc9a0259162f",
    "metadata": {
     "deletable": false,
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "fcf0c8c7-3e01-4825-b502-6b24096bc725",
    "metadata": {
     "deletable": false,
@@ -1372,16 +1372,17 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "def normalize(X_cancer) :\n",
+    "    mean_values = np.mean(X_cancer, axis=0)\n",
+    "    std_values = np.std(X_cancer, axis=0)\n",
+    "    return (X_cancer - mean_values)/std_values\n",
+    "\n",
+    "\n",
     "# splitting by 75% for training and 25% for validation\n",
     "split_percentile = len(X_cancer)*75//100\n",
-    "# Calculate mean and standard deviation for each feature\n",
-    "mean_values = np.mean(X_cancer, axis=0)\n",
-    "std_values = np.std(X_cancer, axis=0)\n",
     "\n",
-    "# Normalized data\n",
-    "X_normalized_cancer = (X_cancer - mean_values)/std_values\n",
-    "\n",
-    "X_train_cancer, X_valid_cancer = X_normalized_cancer[:split_percentile], X_normalized_cancer[split_percentile:]\n",
+    "X_train_cancer, X_valid_cancer = normalize(X_cancer[:split_percentile]), normalize(X_cancer[split_percentile:])\n",
     "y_train_cancer, y_valid_cancer = y_cancer[:split_percentile], y_cancer[split_percentile:]"
    ]
   },
@@ -1410,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "5093501a-a175-42c5-8f55-cd9826f397ed",
    "metadata": {
     "deletable": false,
@@ -1433,9 +1434,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy GaussianGenerativeModel training : 0.9694835680751174\n",
-      "Accuracy GaussianGenerativeModel validation : 0.972027972027972\n",
+      "Accuracy GaussianGenerativeModel validation : 0.958041958041958\n",
       "Accuracy LogisticRegression training : 0.9812206572769953\n",
-      "Accuracy LogisticRegression validation : 0.972027972027972\n"
+      "Accuracy LogisticRegression validation : 0.9440559440559441\n"
      ]
     }
    ],
@@ -1466,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "ceac8dd9",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy LinearDiscriminantAnalysis : 0.972027972027972\n"
+      "Accuracy LinearDiscriminantAnalysis : 0.958041958041958\n"
      ]
     }
    ],
@@ -1523,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "a079b7bf-e98e-4e1c-b7ec-2a7dc3906976",
    "metadata": {
     "deletable": false,
@@ -1613,7 +1614,7 @@
    },
    "source": [
     "## **Answer :**\n",
-    "**Before applying k-fold cross-validation, both the Gaussian Generative Model and Logistic Regression achieved a high accuracy of approximately 97.2%. However, after applying k-fold cross-validation, Logistic Regression outperformed the Gaussian Generative Model, achieving a higher accuracy of approximately 97.4%, while the Gaussian Generative Model's accuracy decreased to approximately 95.1%.**\n",
+    "**Before applying k-fold cross-validation, both the Gaussian Generative Model and Logistic Regression achieved a high accuracy of approximately 95.8%, respectively 94.4%. However, after applying k-fold cross-validation, Logistic Regression outperformed the Gaussian Generative Model, achieving a higher accuracy of approximately 97.4%, while the Gaussian Generative Model's accuracy decreased to approximately 95.1%.**\n",
     "\n",
     "****"
    ]
@@ -1628,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "5c5a3e79",
    "metadata": {},
    "outputs": [],
@@ -1669,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "cbca6bea",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1678,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score for cancer dataset : 0.993006993006993\n",
+      "Accuracy score for cancer dataset : 0.965034965034965\n",
       "Accuracy for first dataset : 0.92\n"
      ]
     }
@@ -1728,7 +1729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
